--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <h1 class="logo-title">MoGo</h1>
+        <h1 class="logo-title"><a href="" class="logo-link">MoGo</a></h1>
         <nav class="menu">
           <ul class="menu-list">
             <li class="menu-list-item">
@@ -36,8 +36,10 @@
           </ul>
         </nav>
       </header>
-      <main class="main-content">
-        <section class="services">
+    </div>
+    <main class="main-content">
+      <section class="services">
+        <div class="container">
           <h2 class="title">
             <span class="title-span">We work with</span>amazing services
           </h2>
@@ -138,8 +140,10 @@
               </div>
             </li>
           </ul>
-        </section>
-        <section class="team">
+        </div>
+      </section>
+      <section class="team">
+        <div class="container">
           <h2 class="title">
             <span class="title-span">Who we are</span> meet our team
           </h2>
@@ -151,45 +155,138 @@
           </p>
           <ul class="team-list">
             <li class="team-list-item">
-              <img
-                src="./img/Layer_16.jpg"
-                alt="matthew-dix"
-                class="member-photo"
-                width="380"
-                height="470"
-              />
+              <div class="img-bg">
+                <div class="member">
+                  <img
+                    src="./img/Layer_16.jpg"
+                    alt="matthew-dix"
+                    class="member-photo"
+                    width="380"
+                    height="470"
+                  />
+                  <div class="overlay">
+                    <ul class="social-links">
+                      <li class="social-links-item">
+                        <a href="#" class="social-link facebook-link"
+                          ><span class="visually-hidden">facebook</span></a
+                        >
+                      </li>
+                      <li class="social-links-item">
+                        <a href="#" class="social-link twitter-link"
+                          ><span class="visually-hidden">twitter</span></a
+                        >
+                      </li>
+                      <li class="social-links-item">
+                        <a href="#" class="social-link pinterest-link"
+                          ><span class="visually-hidden">pinterest</span></a
+                        >
+                      </li>
+                      <li class="social-links-item">
+                        <a href="#" class="social-link instagram-link"
+                          ><span class="visually-hidden">instagram</span></a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <p class="member-name">Matthew Dix</p>
+              <p class="member-position"><i>Graphic Design</i></p>
             </li>
             <li class="team-list-item">
-              <img
-                src="./img/Layer_19.jpg"
-                alt="michael-fertig"
-                class="member-photo"
-                width="380"
-                height="470"
-              />
+              <div class="img-bg">
+                <div class="member">
+                  <img
+                    src="./img/Layer_19.jpg"
+                    alt="matthew-dix"
+                    class="member-photo"
+                    width="380"
+                    height="470"
+                  />
+                  <div class="overlay">
+                    <ul class="social-links">
+                      <li class="social-links-item">
+                        <a href="#" class="social-link facebook-link"
+                          ><span class="visually-hidden">facebook</span></a
+                        >
+                      </li>
+                      <li class="social-links-item">
+                        <a href="#" class="social-link twitter-link"
+                          ><span class="visually-hidden">twitter</span></a
+                        >
+                      </li>
+                      <li class="social-links-item">
+                        <a href="#" class="social-link pinterest-link"
+                          ><span class="visually-hidden">pinterest</span></a
+                        >
+                      </li>
+                      <li class="social-links-item">
+                        <a href="#" class="social-link instagram-link"
+                          ><span class="visually-hidden">instagram</span></a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <p class="member-name">Christopher Campbell</p>
+              <p class="member-position"><i>Branding/UX design</i></p>
             </li>
             <li class="team-list-item">
-              <img
-                src="./img/Layer_18.jpg"
-                alt="christopher-campbell"
-                class="member-photo"
-                width="380"
-                height="470"
-              />
+              <div class="img-bg">
+                <div class="member">
+                  <img
+                    src="./img/Layer_18.jpg"
+                    alt="christopher-campbell"
+                    class="member-photo"
+                    width="380"
+                    height="470"
+                  />
+                  <div class="overlay">
+                    <ul class="social-links">
+                      <li class="social-links-item">
+                        <a href="#" class="social-link facebook-link"
+                          ><span class="visually-hidden">facebook</span></a
+                        >
+                      </li>
+                      <li class="social-links-item">
+                        <a href="#" class="social-link twitter-link"
+                          ><span class="visually-hidden">twitter</span></a
+                        >
+                      </li>
+                      <li class="social-links-item">
+                        <a href="#" class="social-link pinterest-link"
+                          ><span class="visually-hidden">pinterest</span></a
+                        >
+                      </li>
+                      <li class="social-links-item">
+                        <a href="#" class="social-link instagram-link"
+                          ><span class="visually-hidden">instagram</span></a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <p class="member-name">Michael Fertig</p>
+              <p class="member-position"><i>Developer</i></p>
             </li>
           </ul>
-        </section>
-      </main>
-      <footer class="footer">
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
         <p class="footer-text">
           &copy; 2016 MoGo free PSD template by
           <a href="#" class="footer-link">Laaqiq</a>
         </p>
-        <div class="subscribe">
-          <input type="text" class="subscribe-email" />
-          <button class="subscribe-btn" type="button">subscribe</button>
-        </div>
-      </footer>
-    </div>
+        <form action="#" class="subscribe-form">
+          <input type="text" class="subscribe-email" placeholder="Your Email..." />
+          <button class="subscribe-btn" type="button" >subscribe</button>
+
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
