--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -13,10 +13,10 @@
     />
   </head>
   <body>
-    <div class="container">
-      <header class="header">
-        <h1 class="logo-title"><a href="" class="logo-link">MoGo</a></h1>
+    <header class="header">
+      <div class="container">
         <nav class="menu">
+          <a href="" class="logo-link">MoGo</a>
           <ul class="menu-list">
             <li class="menu-list-item">
               <a href="#" class="menu-link">about</a>
@@ -35,8 +35,8 @@
             </li>
           </ul>
         </nav>
-      </header>
-    </div>
+      </div>
+    </header>
     <main class="main-content">
       <section class="services">
         <div class="container">
@@ -191,7 +191,7 @@
                 </div>
               </div>
               <p class="member-name">Matthew Dix</p>
-              <p class="member-position"><i>Graphic Design</i></p>
+              <p class="member-position">Graphic Design</p>
             </li>
             <li class="team-list-item">
               <div class="img-bg">
@@ -230,7 +230,7 @@
                 </div>
               </div>
               <p class="member-name">Christopher Campbell</p>
-              <p class="member-position"><i>Branding/UX design</i></p>
+              <p class="member-position">Branding/UX design</p>
             </li>
             <li class="team-list-item">
               <div class="img-bg">
@@ -269,7 +269,7 @@
                 </div>
               </div>
               <p class="member-name">Michael Fertig</p>
-              <p class="member-position"><i>Developer</i></p>
+              <p class="member-position">Developer</p>
             </li>
           </ul>
         </div>
@@ -282,9 +282,12 @@
           <a href="#" class="footer-link">Laaqiq</a>
         </p>
         <form action="#" class="subscribe-form">
-          <input type="text" class="subscribe-email" placeholder="Your Email..." />
-          <button class="subscribe-btn" type="button" >subscribe</button>
-
+          <input
+            type="text"
+            class="subscribe-email"
+            placeholder="Your Email..."
+          />
+          <button class="subscribe-btn" type="button">subscribe</button>
         </form>
       </div>
     </footer>
