module 07 service section added

--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -84,5 +84,13 @@
         </ul>
       </div>
     </section>
+    <section class="contact">
+      <div class="container">
+        <h2 class="section-title">Contact us</h2>
+        <p class="section-description">
+          Proin iaculis purus consequat sem cure.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
