module-06 icons fixed

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -45,99 +45,45 @@
           </h2>
           <ul class="service-list">
             <li class="service-list-item">
-              <img
-                src="./img/s01.png"
-                alt="clock"
-                class="service-image"
-                width="32"
-                height="32"
-              />
-              <div class="service-name-text">
-                <h3 class="service-name">Photography</h3>
-                <p class="service-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor.
-                </p>
-              </div>
+              <h3 class="service-name">Photography</h3>
+              <p class="service-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
             </li>
             <li class="service-list-item">
-              <img
-                src="./img/s02.png"
-                alt="clock"
-                class="service-image"
-                width="32"
-                height="32"
-              />
-              <div class="service-name-text">
-                <h3 class="service-name">Web Design</h3>
-                <p class="service-text">
-                  Ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                  eiusmod tempor.
-                </p>
-              </div>
+              <h3 class="service-name">Web Design</h3>
+              <p class="service-text">
+                Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
             </li>
             <li class="service-list-item">
-              <img
-                src="./img/s03.png"
-                alt="clock"
-                class="service-image"
-                width="32"
-                height="32"
-              />
-              <div class="service-name-text">
-                <h3 class="service-name">Creativity</h3>
-                <p class="service-text">
-                  Dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                  tempor.
-                </p>
-              </div>
+              <h3 class="service-name">Creativity</h3>
+              <p class="service-text">
+                Dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor.
+              </p>
             </li>
             <li class="service-list-item">
-              <img
-                src="./img/s04.png"
-                alt="clock"
-                class="service-image"
-                width="32"
-                height="32"
-              />
-              <div class="service-name-text">
-                <h3 class="service-name">seo</h3>
-                <p class="service-text">
-                  Ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                  eiusmod.
-                </p>
-              </div>
+              <h3 class="service-name">seo</h3>
+              <p class="service-text">
+                Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod.
+              </p>
             </li>
             <li class="service-list-item">
-              <img
-                src="./img/s05.png"
-                alt="clock"
-                class="service-image"
-                width="32"
-                height="32"
-              />
-              <div class="service-name-text">
-                <h3 class="service-name">Css/Html</h3>
-                <p class="service-text">
-                  Lorem dolor sit amet, consectetur adipiscing elit, sed do
-                  tempor.
-                </p>
-              </div>
+              <h3 class="service-name">Css/Html</h3>
+              <p class="service-text">
+                Lorem dolor sit amet, consectetur adipiscing elit, sed do
+                tempor.
+              </p>
             </li>
             <li class="service-list-item">
-              <img
-                src="./img/s06.png"
-                alt="clock"
-                class="service-image"
-                width="32"
-                height="32"
-              />
-              <div class="service-name-text">
-                <h3 class="service-name">digital</h3>
-                <p class="service-text">
-                  Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-                </p>
-              </div>
+              <h3 class="service-name">digital</h3>
+              <p class="service-text">
+                Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+              </p>
             </li>
           </ul>
         </div>
