--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -90,6 +90,36 @@
         <p class="section-description">
           Proin iaculis purus consequat sem cure.
         </p>
+        <form action="#" class="contact-form" method="post">
+          <div class="form-left-column">
+            <input
+              type="text"
+              name="name"
+              class="contact-name"
+              placeholder="your name"
+            />
+            <input
+              type="text"
+              name="mail"
+              class="contact-mail"
+              placeholder="your e-mail"
+            />
+            <input
+              type="text"
+              name="subject"
+              class="contact-subject"
+              placeholder="subject"
+            />
+          </div>
+          <textarea
+            name="message"
+            id=""
+            cols="30"
+            rows="10"
+            class="contact-message"
+            placeholder="your message"
+          ></textarea>
+        </form>
       </div>
     </section>
   </body>
