Module 08 finished + small fix

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -229,11 +229,12 @@
         </p>
         <form action="#" class="subscribe-form">
           <input
-            type="text"
+            type="email"
             class="subscribe-email"
+            required
             placeholder="Your Email..."
           />
-          <button class="subscribe-btn" type="button">subscribe</button>
+          <button class="subscribe-btn">subscribe</button>
         </form>
       </div>
     </footer>
