--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -98,12 +98,14 @@
                 name="name"
                 class="contact-name"
                 placeholder="your name *"
+                required
               />
               <input
-                type="text"
+                type="email"
                 name="mail"
                 class="contact-mail"
                 placeholder="your e-mail *"
+                required
               />
               <input
                 type="text"
@@ -116,14 +118,13 @@
               <textarea
                 name="message"
                 id=""
-                cols="65"
-                rows="10"
                 class="contact-message"
                 placeholder="your message *"
+                required
               ></textarea>
             </div>
           </div>
-          <input type="submit" class="submit-btn" value="Send Message" />
+          <button type="submit" class="submit-btn">Send Message</button>
         </form>
       </div>
     </section>
