--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -5,31 +5,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework-08</title>
     <meta name="author" content="Ivan Fesenko" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <nav class="site-navigation">
-          <a href="#" class="logo">URLAUBSGLÜCK</a>
           <div class="authorisation">
-            <a href="#" class="log-in">Log in</a>
-            <a href="#" class="sign-up">Sign up</a>
+            <button class="authorisation-btn">Log in</button>
+            <button class="authorisation-btn btn-border">Sign up</button>
           </div>
+          <a href="#" class="logo">URLAUBSGLÜCK</a>
         </nav>
-        <h1 class="title"></h1>
-        <p class="description"></p>
-        <a href="#" class="fint-partner"></a>
+        <h1 class="title">Share your holiday dreams</h1>
+        <p class="description">And find the perfect partner to fullfill it</p>
+        <a href="#" class="find-partner-btn">Find your holiday partner</a>
       </div>
     </header>
+    <main>
+      <div class="container">
+        <section class="partner">
+          <h2 class="partner-title">Meet a partner for your best holiday</h2>
+          <ul class="partner-list">
+            <li class="partner-list-item">
+              <div class="photo-container tv">
+                <img
+                  src="./img/layer6.png"
+                  alt="photo"
+                  class="partner-photo"
+                  width="121"
+                  height="121"
+                />
+              </div>
+              <div class="partner-description">
+                <p class="partner-name">Bradley Hunter</p>
+                <p class="partner-motto">
+                  Based in Chicago. I love playing tennis and loud music.
+                </p>
+              </div>
+            </li>
+            <li class="partner-list-item">
+              <div class="photo-container glass">
+                <img
+                  src="./img/layer7.png"
+                  alt="photo"
+                  class="partner-photo"
+                  width="121"
+                  height="121"
+                />
+              </div>
+              <div class="partner-description">
+                <p class="partner-name">Lucas Marsha</p>
+                <p class="partner-motto">
+                  I get my inspiration from nature and objects around me. I have
+                  a passion to colours, typography and skateboards.
+                </p>
+              </div>
+            </li>
+            <li class="partner-list-item">
+              <div class="photo-container cup">
+                <img
+                  src="./img/layer8.png"
+                  alt="photo"
+                  class="partner-photo"
+                  width="121"
+                  height="121"
+                />
+              </div>
+              <div class="partner-description">
+                <p class="partner-name">Heather Walker</p>
+                <p class="partner-motto">
+                  I'm a happy person that loves cats and climbing on mountains.
+                </p>
+              </div>
+            </li>
+            <li class="partner-list-item">
+              <div class="photo-container tweet">
+                <img
+                  src="./img/layer9.png"
+                  alt="photo"
+                  class="partner-photo"
+                  width="121"
+                  height="121"
+                />
+              </div>
+              <div class="partner-description">
+                <p class="partner-name">Bradley Hunter</p>
+                <p class="partner-motto">
+                  Based in Chicago. I love playing tennis and loud music.
+                </p>
+              </div>
+            </li>
+          </ul>
+          <button class="more-patners-btn">See other partners</button>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
