module 7 icons fixed

--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -48,10 +48,7 @@
           Proin iaculis purus consequat sem cure.
         </p>
         <ul class="service-list">
-          <li class="service-list-item">
-            <div class="service-image basket-bg">
-              <span class="visually-hidden">basket</span>
-            </div>
+          <li class="service-list-item basket-bg">
             <h3 class="service-title">E-Commerce</h3>
             <p class="service-description">
               Proin iaculis purus consequat sem cure digni ssim. Donec
@@ -59,10 +56,7 @@
               tincidunt.
             </p>
           </li>
-          <li class="service-list-item">
-            <div class="service-image laptop-bg">
-              <span class="visually-hidden">laptop</span>
-            </div>
+          <li class="service-list-item laptop-bg">
             <h3 class="service-title">Responsive Web</h3>
             <p class="service-description">
               Proin iaculis purus consequat sem cure digni ssim. Donec
@@ -70,10 +64,7 @@
               tincidunt.
             </p>
           </li>
-          <li class="service-list-item">
-            <div class="service-image lock-bg">
-              <span class="visually-hidden">lock</span>
-            </div>
+          <li class="service-list-item lock-bg">
             <h3 class="service-title">Web Security</h3>
             <p class="service-description">
               Proin iaculis purus consequat sem cure digni ssim. Donec
@@ -117,7 +108,7 @@
             <div class="text-area">
               <textarea
                 name="message"
-                id=""
+                id="message"
                 class="contact-message"
                 placeholder="your message *"
                 required
