--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -28,7 +28,7 @@
               <a href="#" class="logo main-font">URLAUBSGLÜCK</a>
             </nav>
           </div>
-          <div class="col-12 col-lg-8 col-xl-6">
+          <div class="col-12 col-md-10 col-lg-8 col-xl-6">
             <h1 class="title main-font">Share your holiday dreams</h1>
           </div>
           <div class="col-12">
@@ -55,7 +55,7 @@
                 Meet a partner for your best holiday
               </h2>
             </div>
-            <ul class="row partner-list flex-row flex-wrap">
+            <ul class="row partner-list flex-wrap">
               <li
                 class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 partner-list-item d-flex flex-column align-items-center"
               >
@@ -68,7 +68,9 @@
                     height="121"
                   />
                 </div>
-                <div class="partner-description">
+                <div
+                  class="partner-description d-flex flex-wrap justify-content-center"
+                >
                   <p class="partner-name main-font">Bradley Hunter</p>
                   <p class="partner-motto secondary-font">
                     Based in Chicago. I love playing tennis and loud music.
@@ -87,7 +89,9 @@
                     height="121"
                   />
                 </div>
-                <div class="partner-description">
+                <div
+                  class="partner-description d-flex flex-wrap justify-content-center"
+                >
                   <p class="partner-name main-font">Lucas Marsha</p>
                   <p class="partner-motto secondary-font">
                     I get my inspiration from nature and objects around me. I
@@ -107,7 +111,9 @@
                     height="121"
                   />
                 </div>
-                <div class="partner-description">
+                <div
+                  class="partner-description d-flex flex-wrap justify-content-center"
+                >
                   <p class="partner-name main-font">Heather Walker</p>
                   <p class="partner-motto secondary-font">
                     I'm a happy person that loves cats and climbing on
@@ -127,7 +133,9 @@
                     height="121"
                   />
                 </div>
-                <div class="partner-description">
+                <div
+                  class="partner-description d-flex flex-wrap justify-content-center"
+                >
                   <p class="partner-name main-font">Bradley Hunter</p>
                   <p class="partner-motto secondary-font">
                     Based in Chicago. I love playing tennis and loud music.
@@ -135,9 +143,13 @@
                 </div>
               </li>
             </ul>
-            <button class="more-patners-btn main-font">
-              See other partners
-            </button>
+            <div
+              class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3 d-flex justify-content-center"
+            >
+              <button class="more-patners-btn main-font">
+                See other partners
+              </button>
+            </div>
           </div>
         </div>
       </section>
