--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -17,26 +17,29 @@
         <div class="row justify-content-center">
           <div class="col-12">
             <nav
-              class="site-navigation navbar flex-sm-row-reverse justify-content-center justify-content-sm-between"
+              class="site-navigation navbar justify-content-center justify-content-md-between"
             >
+              <a href="#" class="logo main-font d-none d-md-block"
+                >URLAUBSGLÜCK</a
+              >
               <div class="authorisation">
                 <button class="authorisation-btn main-font">Log in</button>
                 <button class="authorisation-btn btn-border main-font">
                   Sign up
                 </button>
               </div>
-              <a href="#" class="logo main-font">URLAUBSGLÜCK</a>
             </nav>
           </div>
-          <div class="col-12 col-md-10 col-lg-8 col-xl-6">
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-7">
+            <a href="#" class="logo main-font d-block d-md-none"
+              >URLAUBSGLÜCK</a
+            >
             <h1 class="title main-font">Share your holiday dreams</h1>
-          </div>
-          <div class="col-12">
             <p class="description secondary-font">
               And find the perfect partner to fullfill it
             </p>
-          </div>
-          <div class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
             <a href="#" class="find-partner-btn main-font"
               >Find your holiday partner</a
             >
@@ -47,109 +50,100 @@
     <main>
       <section class="partner">
         <div class="container">
-          <div
-            class="row justify-content-center flex-column align-items-center"
-          >
+          <div class="row justify-content-center">
             <div class="col-12">
               <h2 class="partner-title main-font">
                 Meet a partner for your best holiday
               </h2>
             </div>
-            <ul class="row partner-list flex-wrap">
-              <li
-                class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 partner-list-item d-flex flex-column align-items-center"
+            <div class="col-12">
+              <ul
+                class="row partner-list flex-wrap justify-content-center text-center"
               >
-                <div class="photo-container tv">
-                  <img
-                    src="./img/layer6.png"
-                    alt="photo"
-                    class="partner-photo"
-                    width="121"
-                    height="121"
-                  />
-                </div>
-                <div
-                  class="partner-description d-flex flex-wrap justify-content-center"
-                >
-                  <p class="partner-name main-font">Bradley Hunter</p>
-                  <p class="partner-motto secondary-font">
-                    Based in Chicago. I love playing tennis and loud music.
-                  </p>
-                </div>
-              </li>
-              <li
-                class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 partner-list-item d-flex flex-column align-items-center"
-              >
-                <div class="photo-container glass">
-                  <img
-                    src="./img/layer7.png"
-                    alt="photo"
-                    class="partner-photo"
-                    width="121"
-                    height="121"
-                  />
-                </div>
-                <div
-                  class="partner-description d-flex flex-wrap justify-content-center"
-                >
-                  <p class="partner-name main-font">Lucas Marsha</p>
-                  <p class="partner-motto secondary-font">
-                    I get my inspiration from nature and objects around me. I
-                    have a passion to colours, typography and skateboards.
-                  </p>
-                </div>
-              </li>
-              <li
-                class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 partner-list-item d-flex flex-column align-items-center"
-              >
-                <div class="photo-container cup">
-                  <img
-                    src="./img/layer8.png"
-                    alt="photo"
-                    class="partner-photo"
-                    width="121"
-                    height="121"
-                  />
-                </div>
-                <div
-                  class="partner-description d-flex flex-wrap justify-content-center"
-                >
-                  <p class="partner-name main-font">Heather Walker</p>
-                  <p class="partner-motto secondary-font">
-                    I'm a happy person that loves cats and climbing on
-                    mountains.
-                  </p>
-                </div>
-              </li>
-              <li
-                class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 partner-list-item d-flex flex-column align-items-center"
-              >
-                <div class="photo-container tweet">
-                  <img
-                    src="./img/layer9.png"
-                    alt="photo"
-                    class="partner-photo"
-                    width="121"
-                    height="121"
-                  />
-                </div>
-                <div
-                  class="partner-description d-flex flex-wrap justify-content-center"
-                >
-                  <p class="partner-name main-font">Bradley Hunter</p>
-                  <p class="partner-motto secondary-font">
-                    Based in Chicago. I love playing tennis and loud music.
-                  </p>
-                </div>
-              </li>
-            </ul>
-            <div
-              class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3 d-flex justify-content-center"
-            >
-              <button class="more-patners-btn main-font">
-                See other partners
-              </button>
+                <li class="col-10 col-sm-6 col-md-6 col-lg-3">
+                  <div class="photo-container tv">
+                    <img
+                      src="./img/layer6.png"
+                      alt="photo"
+                      class="partner-photo"
+                      width="121"
+                      height="121"
+                    />
+                  </div>
+                  <div
+                    class="partner-description d-flex flex-wrap justify-content-center"
+                  >
+                    <p class="partner-name main-font">Bradley Hunter</p>
+                    <p class="partner-motto secondary-font">
+                      Based in Chicago. I love playing tennis and loud music.
+                    </p>
+                  </div>
+                </li>
+                <li class="col-10 col-sm-6 col-md-6 col-lg-3">
+                  <div class="photo-container cup">
+                    <img
+                      src="./img/layer7.png"
+                      alt="photo"
+                      class="partner-photo"
+                      width="121"
+                      height="121"
+                    />
+                  </div>
+                  <div
+                    class="partner-description d-flex flex-wrap justify-content-center"
+                  >
+                    <p class="partner-name main-font">Heather Walker</p>
+                    <p class="partner-motto secondary-font">
+                      I'm a happy person that loves cats and climbing on
+                      mountains.
+                    </p>
+                  </div>
+                </li>
+                <li class="col-10 col-sm-6 col-md-6 col-lg-3">
+                  <div class="photo-container glass">
+                    <img
+                      src="./img/layer8.png"
+                      alt="photo"
+                      class="partner-photo"
+                      width="121"
+                      height="121"
+                    />
+                  </div>
+                  <div
+                    class="partner-description d-flex flex-wrap justify-content-center"
+                  >
+                    <p class="partner-name main-font">Lucas Marsha</p>
+                    <p class="partner-motto secondary-font">
+                      I get my inspiration from nature and objects around me. I
+                      have a passion to colours, typography and skateboards.
+                    </p>
+                  </div>
+                </li>
+
+                <li class="col-10 col-sm-6 col-md-6 col-lg-3">
+                  <div class="photo-container tweet">
+                    <img
+                      src="./img/layer9.png"
+                      alt="photo"
+                      class="partner-photo"
+                      width="121"
+                      height="121"
+                    />
+                  </div>
+                  <div
+                    class="partner-description d-flex flex-wrap justify-content-center"
+                  >
+                    <p class="partner-name main-font">Bradley Hunter</p>
+                    <p class="partner-motto secondary-font">
+                      Based in Chicago. I love playing tennis and loud music.
+                    </p>
+                  </div>
+                </li>
+              </ul>
             </div>
+            <button class="col-11 col-md-4 more-patners-btn main-font">
+              See other partners
+            </button>
           </div>
         </div>
       </section>
