--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -141,7 +141,7 @@
                 </li>
               </ul>
             </div>
-            <button class="col-11 col-md-4 more-patners-btn main-font">
+            <button class="col-11 col-sm-6 col-md-4 more-patners-btn main-font">
               See other partners
             </button>
           </div>
