--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -45,60 +45,58 @@
       </div>
     </header>
     <main class="main-content">
-      <section class="services">
-        <div class="container">
-          <h2 class="title">
-            <span class="title-span">We work with</span>amazing services
+      <div class="container">
+        <section class="services">
+          <h2 class="services-title">
+            <span class="services-title__br">We work with</span>amazing services
           </h2>
-          <ul class="service-list">
-            <li class="service-list-item">
-              <h3 class="service-name">Photography</h3>
-              <p class="service-text">
+          <ul class="services__list">
+            <li class="services__list-item">
+              <h3 class="services__list-item-name">Photography</h3>
+              <p class="services__list-item-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor.
               </p>
             </li>
-            <li class="service-list-item">
-              <h3 class="service-name">Web Design</h3>
-              <p class="service-text">
+            <li class="services__list-item">
+              <h3 class="services__list-item-name">Web Design</h3>
+              <p class="services__list-item-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor.
               </p>
             </li>
-            <li class="service-list-item">
-              <h3 class="service-name">Creativity</h3>
-              <p class="service-text">
+            <li class="services__list-item">
+              <h3 class="services__list-item-name">Creativity</h3>
+              <p class="services__list-item-text">
                 Dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor.
               </p>
             </li>
-            <li class="service-list-item">
-              <h3 class="service-name">seo</h3>
-              <p class="service-text">
+            <li class="services__list-item">
+              <h3 class="services__list-item-name">seo</h3>
+              <p class="services__list-item-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod.
               </p>
             </li>
-            <li class="service-list-item">
-              <h3 class="service-name">Css/Html</h3>
-              <p class="service-text">
+            <li class="services__list-item">
+              <h3 class="services__list-item-name">Css/Html</h3>
+              <p class="services__list-item-text">
                 Lorem dolor sit amet, consectetur adipiscing elit, sed do
                 tempor.
               </p>
             </li>
-            <li class="service-list-item">
-              <h3 class="service-name">digital</h3>
-              <p class="service-text">
+            <li class="services__list-item">
+              <h3 class="services__list-item-name">digital</h3>
+              <p class="services__list-item-text">
                 Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
               </p>
             </li>
           </ul>
-        </div>
-      </section>
-      <section class="team">
-        <div class="container">
-          <h2 class="title">
-            <span class="title-span">Who we are</span> meet our team
+        </section>
+        <section class="team">
+          <h2 class="team-title">
+            <span class="team-title__br">Who we are</span>meet our team
           </h2>
           <p class="team-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -106,127 +104,121 @@
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat.
           </p>
-          <ul class="team-list">
-            <li class="team-list-item">
-              <div class="img-bg">
-                <div class="member">
-                  <img
-                    src="./img/Layer_16.jpg"
-                    alt="matthew-dix"
-                    class="member-photo"
-                    width="380"
-                    height="470"
-                  />
-                  <div class="overlay">
-                    <ul class="social-links">
-                      <li class="social-links-item">
-                        <a href="#" class="social-link facebook-link"
-                          ><span class="visually-hidden">facebook</span></a
-                        >
-                      </li>
-                      <li class="social-links-item">
-                        <a href="#" class="social-link twitter-link"
-                          ><span class="visually-hidden">twitter</span></a
-                        >
-                      </li>
-                      <li class="social-links-item">
-                        <a href="#" class="social-link pinterest-link"
-                          ><span class="visually-hidden">pinterest</span></a
-                        >
-                      </li>
-                      <li class="social-links-item">
-                        <a href="#" class="social-link instagram-link"
-                          ><span class="visually-hidden">instagram</span></a
-                        >
-                      </li>
-                    </ul>
-                  </div>
+          <ul class="team__list">
+            <li class="team__list-item">
+              <div class="team__list-item-img-wrapper">
+                <img
+                  src="./img/layer16.jpg"
+                  alt="matthew-dix"
+                  class="member-photo"
+                  width="380"
+                  height="470"
+                />
+                <div class="overlay">
+                  <ul class="social-list">
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">facebook</span></a
+                      >
+                    </li>
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">twitter</span></a
+                      >
+                    </li>
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">pinterest</span></a
+                      >
+                    </li>
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">instagram</span></a
+                      >
+                    </li>
+                  </ul>
                 </div>
               </div>
-              <p class="member-name">Matthew Dix</p>
-              <p class="member-position">Graphic Design</p>
+              <p class="team__list-item-name">Matthew Dix</p>
+              <p class="team__list-item-position">Graphic Design</p>
             </li>
-            <li class="team-list-item">
-              <div class="img-bg">
-                <div class="member">
-                  <img
-                    src="./img/Layer_19.jpg"
-                    alt="matthew-dix"
-                    class="member-photo"
-                    width="380"
-                    height="470"
-                  />
-                  <div class="overlay">
-                    <ul class="social-links">
-                      <li class="social-links-item">
-                        <a href="#" class="social-link facebook-link"
-                          ><span class="visually-hidden">facebook</span></a
-                        >
-                      </li>
-                      <li class="social-links-item">
-                        <a href="#" class="social-link twitter-link"
-                          ><span class="visually-hidden">twitter</span></a
-                        >
-                      </li>
-                      <li class="social-links-item">
-                        <a href="#" class="social-link pinterest-link"
-                          ><span class="visually-hidden">pinterest</span></a
-                        >
-                      </li>
-                      <li class="social-links-item">
-                        <a href="#" class="social-link instagram-link"
-                          ><span class="visually-hidden">instagram</span></a
-                        >
-                      </li>
-                    </ul>
-                  </div>
+            <li class="team__list-item">
+              <div class="team__list-item-img-wrapper">
+                <img
+                  src="./img/layer19.jpg"
+                  alt="matthew-dix"
+                  class="member-photo"
+                  width="380"
+                  height="470"
+                />
+                <div class="overlay">
+                  <ul class="social-list">
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">facebook</span></a
+                      >
+                    </li>
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">twitter</span></a
+                      >
+                    </li>
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">pinterest</span></a
+                      >
+                    </li>
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">instagram</span></a
+                      >
+                    </li>
+                  </ul>
                 </div>
               </div>
-              <p class="member-name">Christopher Campbell</p>
-              <p class="member-position">Branding/UX design</p>
+              <p class="team__list-item-name">Christopher Campbell</p>
+              <p class="team__list-item-position">Branding/UX design</p>
             </li>
-            <li class="team-list-item">
-              <div class="img-bg">
-                <div class="member">
-                  <img
-                    src="./img/Layer_18.jpg"
-                    alt="christopher-campbell"
-                    class="member-photo"
-                    width="380"
-                    height="470"
-                  />
-                  <div class="overlay">
-                    <ul class="social-links">
-                      <li class="social-links-item">
-                        <a href="#" class="social-link facebook-link"
-                          ><span class="visually-hidden">facebook</span></a
-                        >
-                      </li>
-                      <li class="social-links-item">
-                        <a href="#" class="social-link twitter-link"
-                          ><span class="visually-hidden">twitter</span></a
-                        >
-                      </li>
-                      <li class="social-links-item">
-                        <a href="#" class="social-link pinterest-link"
-                          ><span class="visually-hidden">pinterest</span></a
-                        >
-                      </li>
-                      <li class="social-links-item">
-                        <a href="#" class="social-link instagram-link"
-                          ><span class="visually-hidden">instagram</span></a
-                        >
-                      </li>
-                    </ul>
-                  </div>
+            <li class="team__list-item">
+              <div class="team__list-item-img-wrapper">
+                <img
+                  src="./img/layer18.jpg"
+                  alt="christopher-campbell"
+                  class="member-photo"
+                  width="380"
+                  height="470"
+                />
+                <div class="overlay">
+                  <ul class="social-list">
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">facebook</span></a
+                      >
+                    </li>
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">twitter</span></a
+                      >
+                    </li>
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">pinterest</span></a
+                      >
+                    </li>
+                    <li class="social-list__item">
+                      <a href="#" class="social-list__item-link"
+                        ><span class="visually-hidden">instagram</span></a
+                      >
+                    </li>
+                  </ul>
                 </div>
               </div>
-              <p class="member-name">Michael Fertig</p>
-              <p class="member-position">Developer</p>
+              <p class="team__list-item-name">Michael Fertig</p>
+              <p class="team__list-item-position">Developer</p>
             </li>
           </ul>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
     <footer class="footer">
       <div class="container">
