--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -31,10 +31,20 @@
               <a href="#" class="menu__list-link">contact</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__list-link">basket</a>
+              <button class="menu-btn">
+                <span class="visually-hidden">basket</span>
+                <svg class="menu-btn__icon">
+                  <use href="./img/icons/icons.svg#h-basket"></use>
+                </svg>
+              </button>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__list-link">search</a>
+              <button class="menu-btn">
+                <span class="visually-hidden">search</span>
+                <svg class="menu-btn__icon">
+                  <use href="./img/icons/icons.svg#h-search"></use>
+                </svg>
+              </button>
             </li>
           </ul>
         </nav>
@@ -52,6 +62,9 @@
           </h2>
           <ul class="services__list">
             <li class="services__list-item">
+              <svg class="services__list-item-icon">
+                <use href="./img/icons/icons.svg#i-alarm"></use>
+              </svg>
               <h3 class="services__list-item-name">Photography</h3>
               <p class="services__list-item-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -59,6 +72,9 @@
               </p>
             </li>
             <li class="services__list-item">
+              <svg class="services__list-item-icon">
+                <use href="./img/icons/icons.svg#i-graph"></use>
+              </svg>
               <h3 class="services__list-item-name">Web Design</h3>
               <p class="services__list-item-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -66,6 +82,9 @@
               </p>
             </li>
             <li class="services__list-item">
+              <svg class="services__list-item-icon">
+                <use href="./img/icons/icons.svg#i-comp"></use>
+              </svg>
               <h3 class="services__list-item-name">Creativity</h3>
               <p class="services__list-item-text">
                 Dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -73,6 +92,9 @@
               </p>
             </li>
             <li class="services__list-item">
+              <svg class="services__list-item-icon">
+                <use href="./img/icons/icons.svg#i-book"></use>
+              </svg>
               <h3 class="services__list-item-name">seo</h3>
               <p class="services__list-item-text">
                 Ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -80,6 +102,9 @@
               </p>
             </li>
             <li class="services__list-item">
+              <svg class="services__list-item-icon">
+                <use href="./img/icons/icons.svg#i-home"></use>
+              </svg>
               <h3 class="services__list-item-name">Css/Html</h3>
               <p class="services__list-item-text">
                 Lorem dolor sit amet, consectetur adipiscing elit, sed do
@@ -87,6 +112,9 @@
               </p>
             </li>
             <li class="services__list-item">
+              <svg class="services__list-item-icon">
+                <use href="./img/icons/icons.svg#i-image"></use>
+              </svg>
               <h3 class="services__list-item-name">digital</h3>
               <p class="services__list-item-text">
                 Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
@@ -118,23 +146,35 @@
                   <ul class="social-list">
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">facebook</span></a
-                      >
+                        ><span class="visually-hidden">facebook</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">twitter</span></a
-                      >
+                        ><span class="visually-hidden">twitter</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">pinterest</span></a
-                      >
+                        ><span class="visually-hidden">pinterest</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-pinterest"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">instagram</span></a
-                      >
+                        ><span class="visually-hidden">instagram</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -155,23 +195,35 @@
                   <ul class="social-list">
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">facebook</span></a
-                      >
+                        ><span class="visually-hidden">facebook</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">twitter</span></a
-                      >
+                        ><span class="visually-hidden">twitter</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">pinterest</span></a
-                      >
+                        ><span class="visually-hidden">pinterest</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-pinterest"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">instagram</span></a
-                      >
+                        ><span class="visually-hidden">instagram</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -192,23 +244,35 @@
                   <ul class="social-list">
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">facebook</span></a
-                      >
+                        ><span class="visually-hidden">facebook</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-facebook"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">twitter</span></a
-                      >
+                        ><span class="visually-hidden">twitter</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-twitter"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">pinterest</span></a
-                      >
+                        ><span class="visually-hidden">pinterest</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-pinterest"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-list__item">
                       <a href="#" class="social-list__item-link"
-                        ><span class="visually-hidden">instagram</span></a
-                      >
+                        ><span class="visually-hidden">instagram</span>
+                        <svg class="social-list__item-link--icon">
+                          <use href="./img/icons/icons.svg#s-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -222,19 +286,24 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <p class="footer-text">
-          &copy; 2016 MoGo free PSD template by
-          <a href="#" class="footer-link">Laaqiq</a>
-        </p>
-        <form action="#" class="subscribe-form">
-          <input
-            type="email"
-            class="subscribe-email"
-            required
-            placeholder="Your Email..."
-          />
-          <button class="subscribe-btn">subscribe</button>
-        </form>
+        <div class="footer-wrapper">
+          <p class="footer-wrapper__text">
+            &copy; 2016 MoGo free PSD template by
+            <a href="#" class="footer-wrapper__text--link">Laaqiq</a>
+          </p>
+          <form action="#" class="footer-wrapper__form" method="post">
+            <input
+              type="email"
+              class="footer-wrapper__form-email"
+              name="email"
+              required
+              placeholder="Your Email..."
+            />
+            <button type="submit" class="footer-wrapper__form-btn">
+              subscribe
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
