retina images added

--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -136,10 +136,14 @@
             <li class="team__list-item">
               <div class="team__list-item-img-wrapper">
                 <img
-                  src="./img/layer16.jpg"
+                  srcset="
+                    ./img/layer16-min.jpg    380w,
+                    ./img/layer16@2x-min.jpg 760w
+                  "
+                  src="./img/layer16-min.jpg"
                   alt="matthew-dix"
                   class="member-photo"
-                  width="380"
+                  sizes="380px"
                   height="470"
                 />
                 <div class="overlay">
@@ -185,10 +189,14 @@
             <li class="team__list-item">
               <div class="team__list-item-img-wrapper">
                 <img
-                  src="./img/layer19.jpg"
+                  srcset="
+                    ./img/layer19-min.jpg    380w,
+                    ./img/layer19@2x-min.jpg 760w
+                  "
+                  src="./img/layer19-min.jpg"
                   alt="matthew-dix"
                   class="member-photo"
-                  width="380"
+                  sizes="380px"
                   height="470"
                 />
                 <div class="overlay">
@@ -234,10 +242,14 @@
             <li class="team__list-item">
               <div class="team__list-item-img-wrapper">
                 <img
-                  src="./img/layer18.jpg"
-                  alt="christopher-campbell"
+                  srcset="
+                    ./img/layer18-min.jpg    380w,
+                    ./img/layer18@2x-min.jpg 760w
+                  "
+                  src="./img/layer18-min.jpg"
+                  alt="matthew-dix"
                   class="member-photo"
-                  width="380"
+                  sizes="380px"
                   height="470"
                 />
                 <div class="overlay">
