--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -14,39 +14,43 @@
       <div class="container">
         <nav class="menu">
           <a href="" class="logo">MoGo</a>
-          <ul class="menu__list">
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link">about</a>
-            </li>
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link">service</a>
-            </li>
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link">work</a>
-            </li>
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link">blog</a>
-            </li>
-            <li class="menu__list-item">
-              <a href="#" class="menu__list-link">contact</a>
-            </li>
-            <li class="menu__list-item">
-              <button class="menu-btn">
-                <span class="visually-hidden">basket</span>
-                <svg class="menu-btn__icon">
-                  <use href="./img/icons/icons.svg#h-basket"></use>
-                </svg>
-              </button>
-            </li>
-            <li class="menu__list-item">
-              <button class="menu-btn">
-                <span class="visually-hidden">search</span>
-                <svg class="menu-btn__icon">
-                  <use href="./img/icons/icons.svg#h-search"></use>
-                </svg>
-              </button>
-            </li>
-          </ul>
+          <div class="menu-wrapper">
+            <ul class="navigation__list">
+              <li class="navigation__list-item">
+                <a href="#" class="navigation__list-link">about</a>
+              </li>
+              <li class="navigation__list-item">
+                <a href="#" class="navigation__list-link">service</a>
+              </li>
+              <li class="navigation__list-item">
+                <a href="#" class="navigation__list-link">work</a>
+              </li>
+              <li class="navigation__list-item">
+                <a href="#" class="navigation__list-link">blog</a>
+              </li>
+              <li class="navigation__list-item">
+                <a href="#" class="navigation__list-link">contact</a>
+              </li>
+            </ul>
+            <ul class="buttons-list">
+              <li class="buttons-list-item">
+                <button class="menu-btn">
+                  <span class="visually-hidden">basket</span>
+                  <svg class="menu-btn__icon">
+                    <use href="./img/icons/icons.svg#h-basket"></use>
+                  </svg>
+                </button>
+              </li>
+              <li class="buttons-list-item">
+                <button class="menu-btn">
+                  <span class="visually-hidden">search</span>
+                  <svg class="menu-btn__icon">
+                    <use href="./img/icons/icons.svg#h-search"></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
+          </div>
         </nav>
         <h1 class="header__title">
           <span class="header__title-br">Creative Template</span>Welcome to MoGo
