--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -52,17 +52,19 @@
             </ul>
           </div>
         </nav>
-        <h1 class="header__title">
-          <span class="header__title-br">Creative Template</span>Welcome to MoGo
+        <h1 class="section-title section-title--header">
+          <span class="section-title__br section-title__br--header"
+            >Creative Template</span
+          >Welcome to MoGo
         </h1>
-        <a href="#" class="header__btn">Learn more</a>
+        <a href="#" class="header__btn btn">Learn more</a>
       </div>
     </header>
     <main class="main-content">
       <div class="container">
         <section class="services">
-          <h2 class="services-title">
-            <span class="services-title__br">We work with</span>amazing services
+          <h2 class="section-title section-title--pseudo">
+            <span class="section-title__br">We work with</span>amazing services
           </h2>
           <ul class="services__list">
             <li class="services__list-item">
@@ -127,8 +129,8 @@
           </ul>
         </section>
         <section class="team">
-          <h2 class="team-title">
-            <span class="team-title__br">Who we are</span>meet our team
+          <h2 class="section-title section-title--pseudo">
+            <span class="section-title__br">Who we are</span>meet our team
           </h2>
           <p class="team-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -301,25 +303,23 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="footer-wrapper">
-          <p class="footer-wrapper__text">
-            &copy; 2016 MoGo free PSD template by
-            <a href="#" class="footer-wrapper__text--link">Laaqiq</a>
-          </p>
-          <form action="#" class="footer-wrapper__form" method="post">
-            <input
-              type="email"
-              class="footer-wrapper__form-email"
-              name="email"
-              required
-              placeholder="Your Email..."
-            />
-            <button type="submit" class="footer-wrapper__form-btn">
-              subscribe
-            </button>
-          </form>
-        </div>
+      <div class="container footer-content">
+        <p class="copyright">
+          &copy; 2016 MoGo free PSD template by
+          <a href="#" class="copyright__link">Laaqiq</a>
+        </p>
+        <form action="#" class="subscribe-form" method="post">
+          <input
+            type="email"
+            class="subscribe-form__email"
+            name="email"
+            required
+            placeholder="Your Email..."
+          />
+          <button type="submit" class="subscribe-form__btn btn">
+            subscribe
+          </button>
+        </form>
       </div>
     </footer>
   </body>
