--- a/js/module-01/index.html
+++ b/js/module-01/index.html
@@ -10,6 +10,34 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <script src="./js/script.js"></script>
+    <section class="task-one">
+      <p class="task">
+        Объяви две переменные хранящие название и цену товара: name и price
+        Присвой переменным следующие характеристики товара (сразу при
+        объявлении) название: Генератор защитного поля цена: 1000 Используя
+        шаблонную строку выведи в консоль информацию о товаре, получится:
+        'Выбран «Генератор защитного поля», цена за штуку 1000 кредитов'.
+        Присвой товару новую цену - 2000 Используя шаблонную строку выведи в
+        консоль информацию о товаре, получится: 'Выбран «Генератор защитного
+        поля», цена за штуку 2000 кредитов'.
+      </p>
+      <button class="btn" id="task-one">Run script</button>
+    </section>
+    <section class="task-two">
+      <p class="task">
+        Напиши скрипт проверки количества товаров на складе. Есть переменные
+        total (количество товаров на складе) и ordered (единиц товара в заказе).
+        Сравни эти значения и по результатам выведи: Если в заказе указано
+        число, превышающее количество товаров на складе, то выведи сообщение "На
+        складе недостаточно твоаров!". В другом случае выводи сообщение "Заказ
+        оформлен, с вами свяжется менеджер". Проверь работоспособность кода с
+        разными значениями переменной ordered, например 20, 80 и 130.
+      </p>
+      <button class="btn" id="task-two">Run script</button>
+    </section>
+
+    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/taskOne.js"></script>
+    <script src="./js/taskTwo.js"></script>
   </body>
 </html>
