--- a/js/module-01/index.html
+++ b/js/module-01/index.html
@@ -115,11 +115,11 @@
     </div>
 
     <!-- <script src="./js/script.js"></script> -->
-    <script src="./js/taskOne.js"></script>
-    <script src="./js/taskTwo.js"></script>
-    <script src="./js/taskThree.js"></script>
-    <script src="./js/taskFour.js"></script>
-    <script src="./js/taskFive.js"></script>
-    <script src="./js/taskSix.js"></script>
+    <script type="module" src="./js/taskOne.js"></script>
+    <script type="module" src="./js/taskTwo.js"></script>
+    <script type="module" src="./js/taskThree.js"></script>
+    <script type="module" src="./js/taskFour.js"></script>
+    <script type="module" src="./js/taskFive.js"></script>
+    <script type="module" src="./js/taskSix.js"></script>
   </body>
 </html>
